2000-04-06  Matt Loper  <matt@helixcode.com>

	* camel-folder-pt-proxy.c (_get_full_name): Remove exception param
	from get_full_name() called, since get_full_name() was changed to
	not have an exception in the last param (see dan's notes below).
	(_get_name): same.

2000-04-06  Dan Winship  <danw@helixcode.com>

	* camel-store.[ch]: Reorganize the folder-fetching methods and
	implement a folder cache so that multiple requests for the same
	folder will yield the same CamelFolder object (as long as it
	remains active). Includes some code to remove no-longer-active
	folders from the cache, but it doesn't get used since nothing is
	ever unref'ed in Camel right now...
	
	* providers/mbox/camel-mbox-store.c:
	* providers/pop3/camel-pop3-store.c: update for CamelStore
	changes.

	* camel-folder.[ch]: Remove the (unused) CamelException argument
	from camel_folder_get_name and camel_folder_get_full_name.
	(camel_folder_set_name): make this go away since changing a
	folder's name after it has been created could result in it
	conflicting with a separately-issued folder.
	
2000-04-05  Dan Winship  <danw@helixcode.com>

	* g_url_new really wanted to take a CamelException. So, rename
	Gurl to CamelURL, g_url_* to camel_url_* (with camel_url_new
	taking an exception), and url-util.[ch] to camel-url.[ch]. Also
	force url->port to be numeric and remove camel_service_getport. (I
	was confused before: the URL RFC says the port must be numeric, so
	we don't want to do getportbyname.)

2000-04-01  Dan Winship  <danw@helixcode.com>

	* providers/mbox/camel-mbox-folder.c
	(_check_get_or_maybe_generate_summary_file): Compare
	mbox_file_size and mbox_modtime to the results of stat()ing the
	mbox file, not the summary file. Duh.
	(_close): Update the summary's mbox_file_size and mbox_modtime
	before writing it to disk.

	* providers/mbox/camel-mbox-summary.c (camel_mbox_summary_save,
	camel_mbox_summary_load): Wow. I must have been tired when I wrote